# StarBOM

./: .gitignore  CMakeLists.txt  README.md  README.zh.md
.codex/environments/: environment.toml
docs/: container-toolchain.md
resources/: assets.qrc
scripts/: deploy_from_build.ps1  setup_qt6_toolchain_ubuntu.sh  verify_qt6_toolchain.sh
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/app/: AppController.cpp  AppController.h  AppLogger.cpp  AppLogger.h  BomTableModel.cpp  BomTableModel.h  CategoryController.cpp  CategoryController.h  DataIoController.cpp  DataIoController.h  ImportService.cpp  ImportService.h  ProjectController.cpp  ProjectController.h  ThemeController.cpp  ThemeController.h
src/qml/: I18n.js  Main.qml
src/qml/components/: AppToolButton.qml  BomPane.qml  DebugConsole.qml  DialogHost.qml  DiffPane.qml  SidebarCategoryActions.qml  SidebarFilterTree.qml  SidebarModuleCard.qml  SidebarPane.qml  SidebarProjectActions.qml  TopBar.qml  qmldir
